# hallways

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.js  lib.rs  package.json  tsconfig.json
.github/workflows/: check.yml  hallways-release.yml  release-www.yml  release.yml
asset/shader/: composite.wgsl  overlay.wgsl
hallways/: Cargo.toml  build.rs  main.rs
hallways/shader/: level.wgsl  portal.wgsl
hallways/src/: app.rs  main.rs  mod.rs
hallways/src/audio/: data.rs  mod.rs  speaker.rs
hallways/src/audio/cross_fader/: mod.rs  silence.rs
hallways/src/game/: mod.rs  render.rs  resize.rs  update.rs
hallways/src/game/effect/: cursor.rs  debug.rs  level.rs  overlay.rs  simulation.rs
hallways/src/game/effect/actor/: intent.rs
hallways/src/game/effect/actor/kinematics/: acceleration.rs  friction.rs  intent.rs  mod.rs  slide.rs  teleport.rs
hallways/src/game/effect/menu/: home.rs  intro.rs  load.rs  mod.rs  pause.rs  settings.rs  visit.rs
hallways/src/game/state/: debug.rs  mod.rs
hallways/src/game/state/actor/kinematics/: mod.rs  sweep.rs
hallways/src/game/state/menu/: intro.rs  load.rs  mod.rs  settings.rs  visit.rs
hallways/src/gltf/: node.rs  vertex.rs
hallways/src/gpu/: mod.rs
hallways/src/gpu/bind_group/: composite.rs  level.rs  mod.rs  overlay.rs  portal.rs  world.rs
hallways/src/gpu/buffer/: index.rs
hallways/src/gpu/buffer/storage/: material_index.rs  mod.rs
hallways/src/gpu/buffer/uniform/: camera.rs  clock.rs  resolution.rs
hallways/src/gpu/buffer/vertex/: level.rs  overlay.rs
hallways/src/gpu/pipeline/: composite.rs  overlay.rs  portal.rs
hallways/src/gpu/pipeline/level/: mod.rs  opaque.rs  transparent.rs
hallways/src/gpu/render_pass/: flat.rs  mod.rs
hallways/src/gpu/render_pass/world/: color.rs  oit.rs
hallways/src/gpu/texture/: color.rs  depth.rs  oit_reveal.rs  sampler.rs
hallways/src/level/: cache.rs  error.rs  material.rs  mod.rs  model.rs  render.rs
hallways/src/level/manifest/: fetch.rs  mod.rs
hallways/src/level/portal/: geometry.rs  link.rs  mod.rs
hallways/src/settings/: action.rs
hallways/src/sprite/: border.rs  mod.rs  quad.rs  texture_kind.rs
hallways/src/sprite/system/: logo.rs  mod.rs  selector.rs  solid.rs
hallways/src/sprite/text/: character.rs  input.rs  label.rs  option.rs
hallways/src/util/: color.rs  keycode.rs
hallways/src/util/parry3d/: cylinder.rs  trimesh.rs
release/: Cargo.toml
release/src/: icon.rs  main.rs  mod.rs  win.rs
release/template/: deb.control.template  hallways.desktop.template
src/: main.rs
src/game/: mod.rs  update.rs
src/gltf/: mod.rs
src/level/: cache.rs  model.rs
src/settings/: mod.rs  vsync.rs
src/sprite/: border.rs
src/util/: log.rs  mod.rs
www/: build.ts
www/src/: constant.ts  (+4 more)
(+75 files in other folders)
