[workspace]
members = ["hallways", "release"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
gltf = "1"
ico = "0.3"
image = "0.25"
include_dir = "0.7"
lru = "0.12"
parry3d = "0.17"
pollster = "0.4"
rayon = "1"
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
ureq = "2"
url = { version = "2", features = ["serde"] }
wgpu = "23"
winresource = "0.1"
winit = { version = "0.30", features = ["serde"] }

[workspace.lints.clippy]
module_inception = "allow"
needless_return = "allow"
upper_case_acronyms = "allow"
