[package]
name = "hallways"
version = "0.1.0"
edition = "2021"
authors = ["tlonny (timlonsdale@gmail.com)"]
description = "First-person exploration game of internet-hosted 3D spaces linked by URL portals."
homepage = "https://hallways.lonnycorp.com"
license = "CC-BY-NC-ND-4.0"
build = "build.rs"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
gltf = "1"
ico = "0.3"
image = "0.25"
include_dir = "0.7"
lru = "0.12"
parry3d = "0.17"
pollster = "0.4"
rayon = "1"
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
ureq = "2"
url = { version = "2", features = ["serde"] }
wgpu = "23"
winit = { version = "0.30", features = ["serde"] }

[build-dependencies]
winresource = "0.1"

[lib]
path = "lib.rs"

[[bin]]
name = "hallways"
path = "hallways/main.rs"

[[bin]]
name = "release"
path = "release/src/main.rs"

[lints.clippy]
module_inception = "allow"
needless_return = "allow"
upper_case_acronyms = "allow"
