[package]
name = "hallways"
version = "0.1.0"
edition = "2021"
authors = ["tlonny (timlonsdale@gmail.com)"]
description = "First-person exploration game of internet-hosted 3D spaces linked by URL portals."
homepage = "https://hallways.lonnycorp.com"
license = "CC-BY-NC-ND-4.0"

[dependencies]
bytemuck.workspace = true
dirs.workspace = true
env_logger.workspace = true
glam.workspace = true
gltf.workspace = true
image.workspace = true
include_dir.workspace = true
lru.workspace = true
parry3d.workspace = true
pollster.workspace = true
rayon.workspace = true
rodio.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
ureq.workspace = true
url.workspace = true
wgpu.workspace = true
winit.workspace = true

[build-dependencies]
winresource.workspace = true

[lints]
workspace = true
